--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <div class="buttons has-addons is-centered">
               <a href="https://www.freecodecamp.org/jeremywills1" target="_blank" class="button is-link">FreeCodeCamp Profile</a>
               <a href="https://github.com/Jeremywills1" target="_blank" class="button is-link">Github Profile</a>
+              <a href="https://www.instagram.com/jeremysgaminglive/" target="_blank" class="button is-link">Instagram Profile</a>
             </div>
           </div>
         </div>
