--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           Jeremy Wills
         </h1>
         <h2 class="subtitle is-3">
-          Full Stack Web Developer
+          Aspiring Web Developer
         </h2>
       </div>
     </div>
