--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
               <a href="https://www.freecodecamp.org/jeremywills1" target="_blank" class="button is-link">FreeCodeCamp Profile</a>
               <a href="https://github.com/Jeremywills1" target="_blank" class="button is-link">Github Profile</a>
               <a href="https://www.instagram.com/jeremysgaminglive/" target="_blank" class="button is-link">Instagram Profile</a>
+              <a href="https://zoomquilt.org/" target="_blank" class="button is-link">Chill Button</a>
             </div>
           </div>
         </div>
